a somewhat nicer contract, and (very) slightly less shitty code
